# warg-loader

./: Cargo.toml  README.md  regen-docs.sh
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/src/warg_loader/: config.rs.html  label.rs.html  lib.rs.html  meta.rs.html  oci.rs.html  package.rs.html  release.rs.html  toml.rs.html
docs/src/warg_loader/config/: toml.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
docs/trait.impl/core/default/: trait.Default.js
docs/trait.impl/core/error/: trait.Error.js
docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/trait.impl/core/hash/: trait.Hash.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.Sync.js  (+2 more)
docs/trait.impl/warg_loader/: trait.IntoVersion.js
docs/warg_loader/: all.html  enum.ContentHash.html  enum.Digest.html  enum.Error.html  index.html  sidebar-items.js  struct.Client.html  struct.ClientConfig.html  struct.Config.html  struct.PackageRef.html  struct.RegistryConfig.html  struct.Release.html  struct.Version.html  trait.IntoVersion.html
docs/warg_loader/config/: struct.ClientConfig.html
docs/warg_loader/oci_client/: constant.DEFAULT_MAX_CONCURRENT_DOWNLOAD.html  constant.DEFAULT_MAX_CONCURRENT_UPLOAD.html  enum.CertificateEncoding.html  enum.ClientProtocol.html  fn.current_platform_resolver.html  fn.linux_amd64_resolver.html  index.html  sidebar-items.js  struct.Certificate.html  struct.Client.html  struct.ClientConfig.html  struct.Config.html  struct.ImageData.html  struct.ImageLayer.html  struct.PushResponse.html  struct.TagResponse.html  trait.ClientConfigSource.html
docs/warg_loader/package/: struct.PackageRef.html
docs/warg_loader/release/: enum.ContentHash.html  enum.Digest.html  struct.Release.html
src/: config.rs  lib.rs  local.rs  main.rs  meta.rs  oci.rs  package.rs  release.rs  source.rs  warg.rs
src/config/: toml.rs
src/source/: local.rs  oci.rs  warg.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: main.rs
(+3 files in other folders)
