[package]
name = "warg-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.5"
bytes = "1.5.0"
dirs = "5.0.1"
futures-util = { version = "0.3.29", features = ["io"] }
oci-distribution = "0.10.0"
reqwest = "0.11.23"
secrecy = { version = "0.8.0", features = ["serde"] }
semver = "1.0.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
thiserror = "1.0.51"
tokio-util = { version = "0.7.10", features = ["compat"] }
toml = "0.8.8"
tracing = "0.1.40"

[dev-dependencies]
