[package]
name = "warg-loader"
version = "0.0.1"
edition = "2021"
description = "Warg package loader"
license = "Apache-2.0"
documentation = "https://docs.rs/warg-loader"
repository = "https://github.com/lann/warg-loader"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
base64 = "0.21.5"
bytes = "1.5.0"
dirs = "5.0.1"
docker_credential = "1.2.1"
futures-util = { version = "0.3.29", features = ["io"] }
oci-distribution = "0.10.0"
reqwest = "0.11.23"
secrecy = { version = "0.8.0", features = ["serde"] }
semver = "1.0.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
sha2 = "0.10.8"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
